--- a/src/index.css
+++ b/src/index.css
@@ -10,12 +10,31 @@ html {
 
 body {
   font-size: 1.6rem;
+  background-color: #f8f8f8;
+}
+
+body,
+button {
   font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
 
 button {
-  font-family: 'Roboto', sans-serif;
-  font-style: normal;
   font-weight: 700;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #2AB5DB;
+
+  border-radius: 15px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #BFE8F4;
+
 }
