--- a/src/pages/SignIn/style.css
+++ b/src/pages/SignIn/style.css
@@ -19,6 +19,7 @@
   padding: 4rem 2.5rem;
   border-radius: 2rem;
   background-color: #3D78CB;
+  filter: drop-shadow(0px 3px 12px rgba(255, 255, 255, 0.2));
 }
 
 .form-sign-in h2 {
